--- a/components/Footer/styles.module.scss
+++ b/components/Footer/styles.module.scss
@@ -1,4 +1,5 @@
 .Footer {
+  font-family: "Signika", sans-serif;
   color: black;
   background-color: #fee140;
   background-image: linear-gradient(90deg, #fee140 0%, #fa709a 100%);
