--- a/components/Navbar/styles.module.scss
+++ b/components/Navbar/styles.module.scss
@@ -24,46 +24,48 @@
     border: 1px solid black;
   }
   .SearchBar {
-    display: flex;
-    border: 1px solid black;
-    border-radius: 5px;
-    .Search {
-      width: 850px;
-      height: 40px;
-      font-size: 30px;
+    form {
+      display: flex;
+      border: 1px solid black;
       border-radius: 5px;
-      border: none;
-      padding-left: 5px;
-    }
-    .Search:hover {
-      background-color: rgb(240, 240, 240);
-    }
-    .Search:focus {
-      background-color: white;
-    }
-    .SearchButton {
-      box-shadow: 0px 1px 0px 0px #fff6af;
-      background: linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
-      background-color: #ffec64;
-      border-radius: 6px;
-      border: 1px solid #ffaa22;
-      display: inline-block;
-      cursor: pointer;
-      color: #333333;
-      font-family: Arial;
-      font-size: 15px;
-      font-weight: bold;
-      padding: 6px 24px;
-      text-decoration: none;
-      text-shadow: 0px 1px 0px #ffee66;
-    }
-    .SearchButton:hover {
-      background: linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
-      background-color: #ffab23;
-    }
-    .SearchButton:active {
-      position: relative;
-      top: 1px;
+      .Search {
+        width: 850px;
+        height: 40px;
+        font-size: 30px;
+        border-radius: 5px;
+        border: none;
+        padding-left: 5px;
+      }
+      .Search:hover {
+        background-color: rgb(240, 240, 240);
+      }
+      .Search:focus {
+        background-color: white;
+      }
+      .SearchButton {
+        box-shadow: 0px 1px 0px 0px #fff6af;
+        background: linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
+        background-color: #ffec64;
+        border-radius: 6px;
+        border: 1px solid #ffaa22;
+        display: inline-block;
+        cursor: pointer;
+        color: #333333;
+        font-family: Arial;
+        font-size: 15px;
+        font-weight: bold;
+        padding: 6px 24px;
+        text-decoration: none;
+        text-shadow: 0px 1px 0px #ffee66;
+      }
+      .SearchButton:hover {
+        background: linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+        background-color: #ffab23;
+      }
+      .SearchButton:active {
+        position: relative;
+        top: 1px;
+      }
     }
   }
   .LogIn {
