--- a/components/Cards/styles.module.scss
+++ b/components/Cards/styles.module.scss
@@ -2,55 +2,42 @@
   font-family: "Signika", sans-serif;
   margin: 20px 5px 20px 5px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 10px;
   grid-row-gap: 20px;
+  overflow: hidden;
+
   .Card {
+    width: 480px;
+
     border: 2px solid black;
     border-radius: 25px;
     text-align: center;
 
     img {
       margin-top: 30px;
-      width: 180px;
-      height: 180px;
+      width: 200px;
+      height: 200px;
       cursor: pointer;
     }
     h2 {
       cursor: pointer;
+      font-size: 30px;
+    }
+    .description {
+      font-size: 20px;
     }
     .price {
       display: flex;
-      align-items: center;
+      justify-content: center;
       font-size: 45px;
       svg {
         font-size: 40px;
       }
     }
-    .cart {
-      display: flex;
-      font-size: 45px;
-      padding: 0px 0px 0px 0px;
-    }
   }
-  .skeleton {
-    background-color: #e2e5e7;
-    background-image: linear-gradient(
-      90deg,
-      rgba(#fff, 0),
-      rgba(#fff, 0.5),
-      rgba(#fff, 0)
-    );
-    background-size: 40px 100%;
-    background-repeat: no-repeat;
-    background-position: left -40px top 0;
-    animation: shine 1s ease infinite;
-  }
-
-  @keyframes shine {
-    to {
-      background-position: right -40px top 0;
-    }
+  .Card:hover {
+    box-shadow: 5px 5px gray;
   }
 }
